Fix multisite subdir paths generating broken .html files
Fixes paths ending with '/' (e.g. /fr/) producing nameless '.html' files
instead of 'index.html'. Also passes all site baseUrls to the page
generation subprocess so multisite URL replacement works correctly.

Adds directoryIndex setting to toggle between folder-based (about/index.html)
and flat (about.html) output structure.

Fixes #4

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -56,6 +56,18 @@
     errors:       settings.getErrors('clear'),
 }) }}
 
+{{ forms.lightswitchField({
+    label: 'Use directory index files',
+    required: true,
+    id: 'directoryIndex',
+    name: 'directoryIndex',
+    instructions: 'Use folder-based structure with index.html files instead of flat .html files. For example, `/about` will generate `about/index.html` instead of `about.html`.',
+    on: settings.directoryIndex,
+    disabled:     'directoryIndex' in overrides,
+    warning:      'directoryIndex' in overrides ? configWarning('directoryIndex'),
+    errors:       settings.getErrors('directoryIndex'),
+}) }}
+
 {{ forms.editableTableField({
     label: 'Copy files & directories',
     required: false,
